--- a/index.html
+++ b/index.html
@@ -4,15 +4,37 @@
 
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-<meta name="description" content="website">
-<meta name="keywords" content="Mocar, AwesomeDesign, Developer, website, IT, Frontend">
-<meta name="author" content="Mocar">
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <!-- SEO SETTINGS FOR GOOGLE-->
+  <meta 
+  name="author" 
+  content="AwesomeDesign" 
+ />
+
+<meta
+  name="description"
+  content="an profile website that showing some of my projects, Its gives you more info about me and AwesomeDesign work"
+/>
+
+<!-- SEO SETTINGS FOR WHEN WEBSITE URL IS SHARED -->
+<meta
+  name="og:title"
+  property="og:title"
+  content="Mocar"
+/>
+<meta
+  property="og:description"
+  content="an profile website that showing some of my projects, Its gives you more info about me and AwesomeDesign work"
+/>
+
+<meta 
+  property="og:type" 
+  content="article" 
+/>
+
 
 <title>Mocar</title>
 
 <link rel="stylesheet" href="css/bootstrap.min.css">
-<link rel="stylesheet" href="css/animate.css">
 <link rel="stylesheet" href="css/font-awesome.min.css">
 <link rel="stylesheet" href="css/aos.css">
 <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -383,12 +405,12 @@
 </footer>
 
 
-<script src="js/jquery.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/aos.js"></script>
-<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script src="js/jquery.js" defer></script>
+<script src="js/bootstrap.min.js" defer></script>
+<script src="js/aos.js" defer></script>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js" defer></script>
 
-<script src="js/Mocar.js"></script>
+<script src="js/Mocar.js" defer></script>
 
 </body>
 </html>
