--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+meta
   <!-- SEO SETTINGS FOR GOOGLE-->
   <meta 
   name="author" 
