change some text

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=Edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-meta
+
   <!-- SEO SETTINGS FOR GOOGLE-->
   <meta 
   name="author" 
@@ -39,11 +39,10 @@ meta
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <link rel="stylesheet" href="css/font-awesome.min.css">
 <link rel="stylesheet" href="css/aos.css">
-<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-
-<link rel="stylesheet" href="css/Mocar.css">
 
 <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700" rel="stylesheet">
+
+<link rel="stylesheet" href="css/Mocar.css">
 
 </head>
 <body >
@@ -407,10 +406,9 @@ meta
 </footer>
 
 
-<script src="js/jquery.js" defer></script>
-<script src="js/bootstrap.min.js" defer></script>
-<script src="js/aos.js" defer></script>
-<script src="https://unpkg.com/aos@2.3.1/dist/aos.js" defer></script>
+<script src="js/jquery.js" ></script>
+<script src="js/bootstrap.min.js" ></script>
+<script src="js/aos.js" ></script>
 
 <script src="js/Mocar.js" defer></script>
 
